# wasm_dep_analyzer

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: ci.yml  release.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration_test.rs
tests/testdata/: export_const_global.wasm  export_imported_func.wasm  export_memory.wasm  export_mutable_global.wasm  export_only.wasm  import_export.wasm  import_mutable_global.wasm  import_table.wasm  import_tag.wasm
