[package]
name = "wasm_dep_analyzer"
version = "0.3.0"
edition = "2021"
description = "Wasm module dependency analysis for module resolution"
repository = "https://github.com/denoland/wasm_dep_analyzer"
documentation = "https://docs.rs/wasm_dep_analyzer"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
thiserror = "2"
deno_error = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
